--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "nodejs-hello-world",
-  "version": "0.0.1",
-  "description": "Node.js Hello World for OpenShift 3",
-  "main": "helloworld.js", 
-  "dependencies": {
-    "ejs": "^2.4.1", 
-    "express": "^4.13.4"
-  },
+  "name": "nodejs-test-app",
+  "version": "1.0.0",
+  "description": "Simple Node.js test application",
+  "main": "server.js",
   "scripts": {
-    "start": "node helloworld.js" 
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/rkratky/nodejs-hello-world.git"
-  }
+  "dependencies": {}
 }
